k8s_kind/evaluation-service/evaluation-service-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  namespace: evaluation-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          args:
            - "--appendonly"
            - "yes"
          resources:
            requests:
              cpu: 1m
              memory: 15Mi
            limits:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
