k8s_kind/evaluation-service/evaluation-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: evaluation-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            periodSeconds: 15
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            periodSeconds: 15
            initialDelaySeconds: 30
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 200Mi
