k8s_kind/evaluation-service/evaluation-service-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: evaluation-ns
spec:
  type: ClusterIP
  selector:
    app: redis-service
  ports:
    - port: 6379
      targetPort: 6379
