k8s_kind/evaluation-service/evaluation-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: evaluation-netpol
  namespace: evaluation-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
